fix name homepage in package.json

--- a/footballer-players/package.json
+++ b/footballer-players/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "<https://oussamahoumada.github.io/datavis-project-2024/datavis>",
+  "homepage": "https://oussamahoumada.github.io/datavis-project-2024",
   "name": "footballer-players",
   "version": "0.1.0",
   "private": true,
