--- a/footballer-players/package.json
+++ b/footballer-players/package.json
@@ -20,6 +20,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-jvectormap": "^0.0.16",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -56,4 +57,3 @@
     "react-router-dom": "^6.21.2"
   }
 }
-
