--- a/footballer-players/package.json
+++ b/footballer-players/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://oussamahoumada.github.io/datavis-project-2024",
+  "homepage": "https://oussamahoumada.github.io",
   "name": "footballer-players",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.71",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-router-dom": "^5.3.3",
     "chart.js": "^4.4.1",
     "papaparse": "^5.4.1",
     "prop-types": "^15.8.1",
